--- a/student-hub.html
+++ b/student-hub.html
@@ -32,7 +32,8 @@
             Welcome, Edvenger! Enter your details to access your missions.
           </p>
 
-          <form id="login-form">
+          <!-- onsubmit="return false" prevents page reload if JS fails -->
+          <form id="login-form" onsubmit="return false;">
             <div class="form-field">
               <label for="studentName">Student Name / ID</label>
               <input
@@ -60,7 +61,8 @@
               <strong>heroes2026</strong>
             </p>
 
-            <button type="submit" class="btn btn-primary">
+            <!-- Button calls handleLogin() directly -->
+            <button type="button" class="btn btn-primary" onclick="handleLogin()">
               Enter Student Hub
             </button>
           </form>
@@ -197,42 +199,38 @@
       document.getElementById("year").textContent =
         new Date().getFullYear();
 
-      // Simple front-end login logic
-      const loginForm = document.getElementById("login-form");
-      const loginSection = document.getElementById("login-section");
-      const hubSection = document.getElementById("hub-section");
-      const nameInput = document.getElementById("studentName");
-      const passwordInput = document.getElementById("portalPassword");
-      const nameDisplay = document.getElementById("student-name-display");
-      const hubTitle = document.getElementById("hub-title");
-
       const PORTAL_PASSWORD = "heroes2026";
 
-      if (loginForm) {
-        loginForm.addEventListener("submit", (e) => {
-          e.preventDefault();
-          const name = nameInput.value.trim();
-          const pw = passwordInput.value.trim();
+      // called by button onclick
+      function handleLogin() {
+        const nameInput = document.getElementById("studentName");
+        const passwordInput = document.getElementById("portalPassword");
+        const loginSection = document.getElementById("login-section");
+        const hubSection = document.getElementById("hub-section");
+        const nameDisplay = document.getElementById("student-name-display");
+        const hubTitle = document.getElementById("hub-title");
 
-          if (!name) {
-            alert("Please enter your name.");
-            return;
-          }
+        const name = (nameInput.value || "").trim();
+        const pw = (passwordInput.value || "").trim();
 
-          if (pw !== PORTAL_PASSWORD) {
-            alert("Incorrect password. Please check with your teacher.");
-            return;
-          }
+        if (!name) {
+          alert("Please enter your name.");
+          return;
+        }
 
-          // expose student name for app-student.js (chat, Firestore, etc.)
-          window.currentStudentName = name;
+        if (pw !== PORTAL_PASSWORD) {
+          alert("Incorrect password. Please check with your teacher.");
+          return;
+        }
 
-          nameDisplay.textContent = name;
-          hubTitle.textContent = `Hi ${name}, welcome to your Student Hub!`;
+        // expose student name for app-student.js (chat, Firestore, etc.)
+        window.currentStudentName = name;
 
-          loginSection.style.display = "none";
-          hubSection.style.display = "block";
-        });
+        nameDisplay.textContent = name;
+        hubTitle.textContent = `Hi ${name}, welcome to your Student Hub!`;
+
+        loginSection.style.display = "none";
+        hubSection.style.display = "block";
       }
     </script>
 
