--- a/teacher.html
+++ b/teacher.html
@@ -38,7 +38,7 @@
           </p>
 
           <!-- This is where your JS should render student groups -->
-          <div id="questions-container" class="dashboard-grid-single">
+          <div id="questions-list" class="dashboard-grid-single">
             <!--
               Your app-teacher.js should fill this container with one .question-group
               per student. Example structure for reference:
