--- a/student-hub.html
+++ b/student-hub.html
@@ -104,15 +104,20 @@
 
               <div>
                 <div class="card-header">Your Details</div>
-                <p class="card-subtitle">
-                  Logged in as:
-                  <strong><span id="student-name-display">Student</span></strong>
-                </p>
-                <p class="helper-text">
-                  Your level and subjects may be used later to filter homework
-                  and questions just for you.
-                </p>
-              </div>
+  <p class="card-subtitle">
+    Logged in as:
+    <strong><span id="student-name-display">Student</span></strong>
+  </p>
+  <p class="card-subtitle">
+    Hero Stars:
+    <strong><span id="hero-stars-count">0</span></strong>
+  </p>
+  <p class="helper-text">
+    Your level and subjects may be used later to filter homework and
+    questions just for you. Hero Stars are awarded by your teachers
+    for effort, participation, and improvement.
+  </p>
+</div>
             </div>
           </section>
 
