--- a/student-hub.html
+++ b/student-hub.html
@@ -168,7 +168,12 @@
               <!-- Chat bubbles added by JS -->
             </div>
 
-            <form id="chat-form" class="reply-box" style="margin-top: 0.9rem;">
+            <form
+  id="chat-form"
+  class="reply-box"
+  style="margin-top: 0.9rem;"
+  onsubmit="return false;"
+>
               <label for="chat-input">Your question</label>
               <textarea
                 id="chat-input"
